--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -169,7 +169,7 @@
                   <div class="unit_icon40x40 {{unit.name}}"></div>
                   <div class="unit-val" style="margin-right: -40px; top: 0px; background: #9898986e; height: 40px; width: 40px;">
                     <div>{{unit.count}}</div>
-                    <div style="color: #d00; margin-top: -6px;" *ngIf="unit.killed>0">-{{unit.killed}}</div>
+                    <div style="color: #d00; margin-top: -6px;" *ngIf="unit.killed && unit.killed!=0">-{{unit.killed}}</div>
                   </div>
                 </span>
 							</div>
