--- a/src/app/indexer/overview/overview.component.html
+++ b/src/app/indexer/overview/overview.component.html
@@ -1,4 +1,8 @@
-<div id="pagehead" style="height: 100%; margin: -12px 10px 0 !important;">
+<div *ngIf="world && world.substr(0,2)=='ru'" >
+  <img style="width: 50%; margin-left: 25%;" src="assets/images/ua.png">
+</div>
+
+<div *ngIf="!world || world.substr(0,2)!='ru'" id="pagehead" style="height: 100%; margin: -12px 10px 0 !important;">
 
 	<div *ngIf="loading" class="text-center">
 		<div class="align-middle" style="position: relative; top: 250px; left: 25%; width: 50%;">
@@ -158,7 +162,7 @@
                       <div class="unit-row">
                         <div class="unit-icon-sm" *ngFor="let unit of town.units | ValuesPipe; let i = index;" title="{{unit?.name}}">
                           <div class="unit_icon40x40 {{unit.name}}"><span class="unit-val">{{unit.count}}</span></div>
-                          <div style="color: #d00;" *ngIf="unit.killed>0">-{{unit.killed}}</div>
+                          <div style="color: #d00;" *ngIf="unit.killed && unit.killed!=0">-{{unit.killed}}</div>
                         </div>
                       </div>
                     </div>
