--- a/src/app/changelog/script-version/script-version.component.html
+++ b/src/app/changelog/script-version/script-version.component.html
@@ -1,10 +1,10 @@
 <h4 (click)="details_hidden=!details_hidden" [ngClass]="{'collapsable': collapsable}">
-  {{title}} <span *ngIf="!collapsable" class="label label-success">New</span>
+  {{title}} <span *ngIf="new" class="label label-success" style="margin-left: 10px;">New!</span>
   <span *ngIf="collapsable" class="toggle-info">{{details_hidden?'More':'Less'}} info</span>
 </h4>
 <p *ngIf="!collapsable || !details_hidden">
   <ng-content></ng-content>
-  <a href="{{github_url}}" target="_blank">
+  <a *ngIf="github_url" href="{{github_url}}" target="_blank">
     <i class="fa fa-github" aria-hidden="true"></i> View detailed changes on github.com
   </a>
 </p>
