--- a/src/app/scoreboard/player-overview.html
+++ b/src/app/scoreboard/player-overview.html
@@ -5,7 +5,8 @@
 
 		<div class="text-center" style="width: 100%;">
 			<h2 mat-dialog-title>Points gained by <a routerLink="/player" [queryParams]="{world: world, id: player_id}"><img src="../../assets/images/player_ico.png" style="height: 28px; margin-top: -5px;"/> {{player_name}}</a> on <span class="gd-primary">{{date}}</span></h2>
-		</div>
+		  <h4>Note: click on one of the bars to see an hourly comparison to other players</h4>
+    </div>
 
     <mat-progress-bar *ngIf="loading" mode="indeterminate" style="margin: 25px 0px;"></mat-progress-bar>
 
@@ -17,18 +18,25 @@
         </div>
 
         <div *ngIf="!loading && !error" style="display: flex; align-content: center;">
-            <div class="container-fluid" style="background: #fbfbfb; box-shadow: 0px 0px 15px -6px rgba(0, 0, 0, 0.4); padding: 15px 30px 5px 5px;">
+            <div class="container-fluid" style="">
+
+              <h3 class="mat-secondary" style="text-align: center; background: #e5e5e5; margin-bottom: 0px; border-top-left-radius: 20px; border-top-right-radius: 20px; color: #334254; padding: 5px;">
+                Hourly breakdown
+              </h3>
+              <div class="overview-container" style="border-bottom-right-radius: 20px; border-bottom-left-radius: 20px;">
+
                 <div class="row" style="overflow: hidden; max-width: 80vw;" [ngStyle]="{'width': (300+100*data.length)+'px'}">
                     <div #overviewDay class="col-sm-12">
                         <ngx-charts-bar-vertical-2d
 	                        [animations]="false"
-                          [view]="[overviewDay.offsetWidth, overviewDay.offsetWidth/2.5>400?overviewDay.offsetWidth/2.5:400]"
+                          [view]="[overviewDay.offsetWidth, overviewDay.offsetWidth/2.5<350?overviewDay.offsetWidth/2.5:350]"
                           [scheme]="{domain: ['#ea6153', '#297fb9']}"
                           [results]="data"
                           [gradient]="false"
                           [xAxis]="true"
                           [yAxis]="true"
                           [legend]="true"
+                          [legendTitle]="'Points gained by'"
                           [showXAxisLabel]="true"
                           [showYAxisLabel]="true"
                           [roundDomains]="true"
