--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,17 @@ pre {
   border-radius: 20px;
   border: 3px solid #fff;
 }
+.gd-scrollbar-trans::-webkit-scrollbar {
+  width: 10px;
+}
+.gd-scrollbar-trans::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0);
+}
+.gd-scrollbar-trans::-webkit-scrollbar-thumb {
+  background-color: #30435796;
+  border-radius: 20px;
+  border: 3px solid rgba(255, 255, 255, 0);
+}
 
 .pre-no-css {
   max-height: unset !important;
